envoy-quic.yaml
static_resources:
  listeners:
  - name: quic_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
        protocol: UDP
    udp_listener_config:
      quic_options: {}
      downstream_socket_config:
        prefer_gro: true
    listener_filters:
    - name: envoy.filters.udp_listener.quic
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.udp.quic.v3alpha.QuicFilterConfig
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/quic"
                route:
                  cluster: quic_bridge_cluster
                  timeout: 0.5s
              - match:
                  prefix: "/api/graph"
                route:
                  cluster: graph_analyzer_cluster
                  timeout: 0.5s
              - match:
                  prefix: "/"
                route:
                  cluster: sveltekit_cluster
                  timeout: 2s
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: quic_bridge_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: quic_bridge_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: quic-bridge
                port_value: 8094
    http2_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive:
        keepalive_probes: 3
        keepalive_time: 600
        keepalive_interval: 60

  - name: graph_analyzer_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: graph_analyzer_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: graph-analyzer
                port_value: 8093
    http2_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive:
        keepalive_probes: 3
        keepalive_time: 600
        keepalive_interval: 60

  - name: sveltekit_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: sveltekit_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sveltekit-1
                port_value: 5173
        - endpoint:
            address:
              socket_address:
                address: sveltekit-2
                port_value: 5174
    http2_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive:
        keepalive_probes: 3
        keepalive_time: 600
        keepalive_interval: 60

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
